--- a/src/App.css
+++ b/src/App.css
@@ -12,29 +12,30 @@
 }
 
 .Main {
-  background-color: red;
   display: grid;
   grid-template-rows: 1fr 101px;
 }
 
 .Main_top {
-  background-color: blue;
   grid-row: 1 / span 1;
   display: grid;
   grid-template-columns: 1fr 302px;
 }
 
 .Main_app {
-  background-color: yellow;
   grid-column: 1 / span 1;
+
+  background-image: linear-gradient(to bottom, #000c1d, #08152d);
 }
 
-.Left_sidebar {
-  background-color: green;
+.Right_sidebar {
   grid-column: 2 / span 1;
+
+  opacity: 0.91;
+  backdrop-filter: blur(11.1px);
+  background-image: linear-gradient(to top, #010b1e, #020b1c 100%);
 }
 
 .controls {
-  background-color: purple;
   grid-row: 2 / span 1;
 }
