Changed colours of shuffle and loop icons

--- a/src/components/common/Controls/style.css
+++ b/src/components/common/Controls/style.css
@@ -115,3 +115,9 @@
   height: 60px !important;
   color: #b3b3b3;
 }
+
+.c_outsideIcon {
+  width: 30px !important;
+  height: 30px !important;
+  color: #565656;
+}
