--- a/src/components/common/Controls/style.css
+++ b/src/components/common/Controls/style.css
@@ -14,12 +14,6 @@
   grid-column: 2 / span 1;
 }
 
-.c_tempProgress {
-  width: 25%;
-  border-radius: 2px;
-  background-image: linear-gradient(to left, #1ed761, #1e64d7);
-}
-
 .c_tempProgressEnd {
   width: 5px;
   height: 5px;
@@ -35,14 +29,45 @@
 
 .c_musicProgress {
   width: inherit;
+  height: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.c_emptyProgress {
+  width: 100%;
   height: 5px;
   background-color: #747474;
   display: flex;
 }
 
+.c_tempProgress {
+  width: 25%;
+  border-radius: 2px;
+  background-image: linear-gradient(to left, #1ed761, #1e64d7);
+}
+
+.c_time {
+  width: 100%;
+  height: 14px;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  font-family: Raleway;
+  font-size: 12.8px;
+  font-weight: 600;
+  line-height: 1.17;
+  text-align: left;
+  color: #787878;
+  cursor: default;
+}
+
 .c_bottom {
   width: inherit;
-  height: 96px;
+  height: 79px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
@@ -51,13 +76,13 @@
   grid-column: 1 / span 1;
   padding-left: 25px;
   display: flex;
-  height: 96px;
+  height: 79px;
   align-items: center;
 }
 
 .c_albumArt {
-  width: 70px;
-  height: 70px;
+  width: 62px;
+  height: 62px;
   background-image: url('../../../assets/graduation.jpg');
   background-size: 70px 70px;
 }
@@ -91,7 +116,7 @@
 
 .c_playbackControls_div {
   grid-column: 2 / span 1;
-  height: 96px;
+  height: 79px;
   display: flex;
   justify-content: center;
   width: inherit;
