--- a/src/components/pages/Liked/style.css
+++ b/src/components/pages/Liked/style.css
@@ -1,7 +1,11 @@
 .liked_box {
   width: inherit;
-  height: inherit;
+  height: 790px;
   cursor: default;
+  overflow: auto;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  overscroll-behavior: contain;
 }
 
 .liked_header {
@@ -47,4 +51,53 @@
   width: 447px;
   height: 1px;
   background-color: #ffffff;
+}
+
+.liked_table {
+  margin-top: 20px;
+}
+
+.table_header {
+  color: #d6d6d6 !important;
+  font-size: 20px !important;
+  font-weight: 600 !important;
+  line-height: 1.35 !important;
+  letter-spacing: 1px !important;
+  text-align: left !important;
+  padding: 0px 40px 0px 16px !important;
+  border-bottom: 1px solid #3b4c64 !important;
+}
+
+.table_row {
+  padding: 12px 40px 12px 16px !important;
+}
+
+.table_cell {
+  font-size: 16px !important;
+  line-height: 1.35 !important;
+  letter-spacing: 1px !important;
+  text-align: left !important;
+  color: #d6d6d6 !important;
+  border-bottom: 1px solid #3b4c64 !important;
+}
+
+.liked_underline:hover {
+  text-decoration: underline !important;
+}
+
+.table_row:hover {
+  background-color: rgba(214, 214, 214, 0.2);
+}
+
+.table_icon {
+  visibility: hidden;
+}
+
+.table_row:hover > .table_cell > .table_icon {
+  visibility: visible;
+}
+
+.table_icon:hover {
+  color: #ffffff;
+  transform: scale(1.2);
 }
