--- a/src/components/common/Controls/style.css
+++ b/src/components/common/Controls/style.css
@@ -35,16 +35,24 @@
   justify-content: space-between;
 }
 
+.c_rootProgress {
+  height: 5px !important;
+  padding: 0 !important;
+}
+
 .c_emptyProgress {
-  width: 100%;
-  height: 5px;
-  background-color: #747474;
-  display: flex;
+  height: 5px !important;
+  background-color: #747474 !important;
 }
 
 .c_songProgress {
   border-radius: 2px;
+  height: 5px !important;
   background-image: linear-gradient(to left, #1ed761, #1e64d7);
+}
+
+.c_rootProgress:hover > .c_thumb {
+  visibility: visible;
 }
 
 .c_time {
@@ -173,7 +181,7 @@
   border-radius: 2px !important;
 }
 
-.c_volume:hover .c_volumeBar_thumb {
+.c_volume:hover > .c_thumb {
   visibility: visible;
 }
 
@@ -183,14 +191,14 @@
   border-radius: 2px !important;
 }
 
-.c_volumeBar_thumb {
+.c_thumb {
   visibility: hidden;
   background-color: #b3b3b3 !important;
 }
 
-.c_volumeBar_thumb.MuiSlider-active {
+.c_thumb.MuiSlider-active {
   box-shadow: 0px 0px 0px 8px rgba(179, 179, 179, 0.16) !important;
 }
-.c_volumeBar_thumb:hover {
+.c_thumb:hover {
   box-shadow: 0px 0px 0px 8px rgba(179, 179, 179, 0.16) !important;
 }
